--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>welcome-otoha</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="(min-width:801px)"href="style.css">
     <link rel="stylesheet" media="(max-width:800px)" href="mobile.css">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 </head>
