--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <title>welcome-otoha</title>
-    <link rel="stylesheet" media="(min-width:801px)"href="style.css">
+    <link rel="stylesheet" media="(min-width:801px)" href="style.css">
     <link rel="stylesheet" media="(max-width:800px)" href="mobile.css">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP:300,400,500,700,900&display=swap&subset=japanese" rel="stylesheet">
 </head>
 
 <body>
-<h1 class="index">testシャミれ</h1>
-<h1 class="mobile">testおとは</h1>
-
-</body>
-
-</html>
+    <header>
+        <img class="heroForStyle" src="imageForStyle/hero.jpg" alt="シャミれ。">
+        <img class="heroForMobile" src="imageForMobile/hero.jpg" alt="シャミれ。">
+    </header>
+    
+    <section class="catchPhrase">
+        <p>
+            今しかできない新しいこと、<br>
+            慶應でしかできないこと、<br>
+            始めませんか？
+        </p>
+    </section>
+</body></html>
