--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 
 <body>
     <header>
-        <img class="heroForStyle" src="imageForStyle/hero.jpg" alt="シャミれ。">
-        <img class="heroForMobile" src="imageForMobile/hero.jpg" alt="シャミれ。">
+        <img class="heroForStyle" src="imageForStyle/hero.jpg" width="100%" alt="">
+        <img class="heroForMobile" src="imageForMobile/pro-hero.jpg" width="100%" alt="">
+        <!--<h1>シャミれ。</h1>-->
+        <p>
+            今しかできない新しいこと、<br>
+            慶應でしかできないこと、<br>
+            始めませんか？
+        </p>
     </header>
-    
+
     <section class="catchPhrase">
         <p>
             今しかできない新しいこと、<br>
@@ -23,4 +29,15 @@
             始めませんか？
         </p>
     </section>
+
+    <nav>
+        <ul>
+            <li>弦音巴とは？</li>
+            <li>説明会・ライブ</li>
+            <li>練習見学</li>
+            <li>新歓食事会</li>
+            <li>活動風景</li>
+            <li>コンタクト</li>
+        </ul>
+    </nav>
 </body></html>
