--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <img class="heroForStyle" src="imageForStyle/hero.jpg" width="100%" alt="">
-        <img class="heroForMobile" src="imageForMobile/pro-hero.jpg" width="100%" alt="">
-        <!--<h1>シャミれ。</h1>-->
+        <img class="heroForMobile" src="imageForMobile/hero.jpg" width="100%" alt="">
+        <div><h1>シャミれ。</h1></div>
         <p>
             今しかできない新しいこと、<br>
             慶應でしかできないこと、<br>
@@ -32,12 +32,13 @@
 
     <nav>
         <ul>
-            <li>弦音巴とは？</li>
-            <li>説明会・ライブ</li>
-            <li>練習見学</li>
-            <li>新歓食事会</li>
-            <li>活動風景</li>
-            <li>コンタクト</li>
+           <li><a href=""><img src="imageForStyle/otoha-logo.png" alt=""></a></li>
+            <li><a href="">弦音巴とは？</a></li>
+            <li><a href="">説明会・ライブ</a></li>
+            <li><a href="">練習見学</a></li>
+            <li><a href="">新歓食事会</a></li>
+            <li><a href="">活動風景</a></li>
+            <li><a href="">コンタクト</a></li>
         </ul>
     </nav>
 </body></html>
