--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
 
 <body>
     <header>
+        <div id="nav-drawer">
+            <input id="nav-input" type="checkbox" class="nav-unshown">
+            <label id="nav-open" for="nav-input"><span></span></label>
+            <label class="nav-unshown" id="nav-close" for="nav-input"></label>
+            <div id="nav-content">ここに中身を入れる</div>
+        </div>
         <img class="heroForStyle" src="imageForStyle/hero.jpg" width="100%" alt="">
         <img class="heroForMobile" src="imageForMobile/hero.jpg" width="100%" alt="">
-        <div><h1>シャミれ。</h1></div>
+        <div>
+            <h1>シャミれ。</h1>
+        </div>
         <p>
             今しかできない新しいこと、<br>
             慶應でしかできないこと、<br>
@@ -31,14 +39,14 @@
     </section>
 
     <nav>
+        <a class="navImg" href=""><img src="imageForStyle/otoha-logo.png" alt=""></a>
         <ul>
-           <li><a href=""><img src="imageForStyle/otoha-logo.png" alt=""></a></li>
-            <li><a href="">弦音巴とは？</a></li>
-            <li><a href="">説明会・ライブ</a></li>
-            <li><a href="">練習見学</a></li>
-            <li><a href="">新歓食事会</a></li>
-            <li><a href="">活動風景</a></li>
-            <li><a href="">コンタクト</a></li>
+            <li><a class="navItem" href="">弦音巴とは？</a></li>
+            <li><a class="navItem" href="">説明会・ライブ</a></li>
+            <li><a class="navItem" href="">練習見学</a></li>
+            <li><a class="navItem" href="">新歓食事会</a></li>
+            <li><a class="navItem" href="">活動風景</a></li>
+            <li><a class="navItem" href="">コンタクト</a></li>
         </ul>
     </nav>
 </body></html>
