--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
 
 <body>
     <header>
-        <div id="nav-drawer">
-            <input id="nav-input" type="checkbox" class="nav-unshown">
-            <label id="nav-open" for="nav-input"><span></span></label>
-            <label class="nav-unshown" id="nav-close" for="nav-input"></label>
-            <div id="nav-content">ここに中身を入れる</div>
-        </div>
         <img class="heroForStyle" src="imageForStyle/hero.jpg" width="100%" alt="">
         <img class="heroForMobile" src="imageForMobile/hero.jpg" width="100%" alt="">
         <div>
@@ -39,9 +33,9 @@
     </section>
 
     <nav>
-        <a class="navImg" href=""><img src="imageForStyle/otoha-logo.png" alt=""></a>
+        <a class="navImg" href="https://otohakeio.wixsite.com/keiootoha"><img src="imageForStyle/otoha-logo.png" alt=""></a>
         <ul>
-            <li><a class="navItem" href="">弦音巴とは？</a></li>
+            <li><a class="navItem" href="#whatIsOtoha">弦音巴とは？</a></li>
             <li><a class="navItem" href="">説明会・ライブ</a></li>
             <li><a class="navItem" href="">練習見学</a></li>
             <li><a class="navItem" href="">新歓食事会</a></li>
@@ -49,4 +43,29 @@
             <li><a class="navItem" href="">コンタクト</a></li>
         </ul>
     </nav>
+
+    <section id="whatIsOtoha">
+        <img src="imageForStyle/whatIsOtoha-otoha-logo.png" alt="">
+        <div class="purposeContainer">
+            <p class="purpose">「新しいことがしたい。」<p>
+                    <p class="purpose">「人と違うことがしたい。」</p>
+                    <p class="purpose">「一度は音楽をしたい。」</p>
+                    <p class="purpose">「着付けを習得したい。」</p>
+        </div>
+        <p id="explanationStyle">
+            弦音巴は、そんなあなたが求めていたサークルかもしれません。<br>
+            「津軽三味線集団弦音巴」は、創立5年目となる慶應義塾公認津軽三味線サークルです。<br>
+            ほぼ全員のメンバーが初心者から始めました。<br>
+            最後の学生生活、私たちと共に「挑戦」しませんか？
+        </p>
+        <p id="explanationMobile">
+            弦音巴は、そんなあなたが<br>
+            求めていたサークルかもしれません。<br>
+            「津軽三味線集団弦音巴」は、創立5年目となる<br>
+            慶應義塾公認津軽三味線サークルです。<br>
+            ほぼ全員のメンバーが初心者から始めました。<br>
+            最後の学生生活、私たちと共に「挑戦」しませんか？
+        </p>
+
+    </section>
 </body></html>
