--- a/index.html
+++ b/index.html
@@ -220,6 +220,60 @@
 
     <!-- 新歓食事会作成 -->
     <section id="welcomeParty" class="fuwat">
+        <p class="welcomePartyTitle">新歓食事会</p>
+        <div id="welcomePartyContainerForMobile">
+            <div class="welcomePartyDateBoxForMobile">
+                <div class="welcomePartyDayBoxForMobile">12</div>
+                <div class="welcomePartyMonthBoxForMobile">April<br><span>Fri.</span></div>
+            </div>
+            <div class="welcomePartyPlaceBoxForMobile">
+                <p>＠64Dinner（日吉）
+                    <br>ライブ演奏も行います！</p>
+            </div>
+            <div class="welcomePartyDateBoxForMobile">
+                <div class="welcomePartyDayBoxForMobile DayBottomForMobile">16</div>
+                <div class="welcomePartyMonthBoxForMobile MonthBottomForMobile">April<br><span>Tue.</span></div>
+            </div>
+            <div class="welcomePartyPlaceBoxForMobile PlaceBottomForMobile">
+                <p>＠ラパウザ（自由が丘）</p>
+            </div>
+        </div>
+        <div id="welcomePartyContainer">
+            <img class="imgForStyle" src="imageForStyle/welcomeParty.png" alt="">
+            <img class="imgForMobile" src="imageForMobile/welcomeParty.png" alt="">
+            <div id="welcomePartyInfoContainer">
+                <div class="welcomePartyDateBox">
+                    <div class="welcomePartyDayBox">12</div>
+                    <div class="welcomePartyMonthBox">April<br><span>Fri.</span></div>
+                </div>
+                <div class="welcomePartyPlaceBox">
+                    <p>＠64Dinner（日吉）
+                        <br>ライブ演奏も行います！</p>
+                </div>
+                <div class="welcomePartyDateBox">
+                    <div class="welcomePartyDayBox DayBottom">16</div>
+                    <div class="welcomePartyMonthBox MonthBottom">April<br><span>Tue.</span></div>
+                </div>
+                <div class="welcomePartyPlaceBox PlaceBottom">
+                    <p>＠ラパウザ（自由が丘）</p>
+                </div>
+                <div class="welcomePartyTimeAndPlaceBox">
+                    <p class="welcomePartyTimeAndPlaceBoxForStyle">18:15 諭吉先生像前　集合</p>
+                    <p class="welcomePartyTimeAndPlaceBoxForMobile">18:15
+                        <br>諭吉先生像前　集合</p>
+                </div>
+                <div class="welcomePartyExplanation">
+                    <p class="welcomePartyExplanationForStyle">予約必須、先着順です。また、参加費は500円です。
+                        <br>参加を希望される方は当日までに、
+                        <br>otoha.keio@gmail.comまでご連絡ください。</p>
+                    <p class="welcomePartyExplanationForMobile">予約必須、先着順です。
+                        <br>また、参加費は500円です。
+                        <br>参加を希望される方は当日までに、
+                        <br>otoha.keio@gmail.com
+                        <br>までご連絡ください。</p>
+                </div>
+            </div>
+        </div>
 
     </section>
 
@@ -238,8 +292,5 @@
                 });
             });
         });
-
     </script>
-</body>
-
-</html>
+</body></html>
