--- a/index.html
+++ b/index.html
@@ -274,8 +274,9 @@
                 </div>
             </div>
         </div>
-
     </section>
+    
+    <!-- 活動風景作成 -->
 
     <!-- jQuery -->
     <script type="text/javascript">
