--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="slick/slick.css" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
+
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 
 <body>
@@ -270,11 +272,11 @@
                 <div class="welcomePartyExplanation">
                     <p class="welcomePartyExplanationForStyle">予約必須、先着順です。また、参加費は500円です。
                         <br>参加を希望される方は当日までに、
-                        <br>otoha.keio@gmail.comまでご連絡ください。</p>
+                        <br><a href="mailto:otoha.keio@gmail.com">otoha.keio@gmail.com</a>までご連絡ください。</p>
                     <p class="welcomePartyExplanationForMobile">予約必須、先着順です。
                         <br>また、参加費は500円です。
                         <br>参加を希望される方は当日までに、
-                        <br>otoha.keio@gmail.com
+                        <br><a href="mailto:otoha.keio@gmail.com?body=%E6%96%B0%E6%AD%93Web%E3%82%B5%E3%82%A4%E3%83%88%E3%81%8B%E3%82%89%E3%83%A1%E3%83%BC%E3%83%AB%E3%82%92%E9%80%81%E4%BF%A1%E3%81%97%E3%81%BE%E3%81%99%E3%80%82%0D%0A%0D%0A%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%0D%0A%0D%0A%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%0D%0A%E5%AD%A6%E9%83%A8%E3%83%BB%E5%AD%A6%E5%B9%B4%EF%BC%9A%0D%0A%0D%0A%E9%9B%BB%E8%A9%B1%E7%95%AA%E5%8F%B7%EF%BC%9A%0D%0A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A%0D%0A%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D">otoha.keio@gmail.com</a>
                         <br>までご連絡ください。</p>
                 </div>
             </div>
@@ -303,15 +305,14 @@
     <!-- コンタクト作成 -->
     <section id="contact" class="fuwat">
         <p>コンタクト</p>
-        <div>
-            <ul>
-                <li><a href="https://twitter.com/keio_otoha">あ</a></li>
-                <li><a href="https://www.instagram.com/keio_otoha_tokyo/?hl=ja">い</a></li>
-                <li><a href="https://www.facebook.com/keiootoha/">う</a></li>
-            </ul>
-        </div>
         <p class="forStyle">お問い合わせは公式メールアドレスまたは各種SNSにて受け付けております。</p>
         <p class="forMobile">お問い合わせは公式メールアドレス<br>または各種SNSにて受け付けております。</p>
+        <ul>
+            <li><a href="https://twitter.com/keio_otoha"><i class="fab fa-twitter-square icon"></i></a></li>
+            <li><a href="https://www.instagram.com/keio_otoha_tokyo/?hl=ja"><i class="fab fa-instagram icon"></i></a></li>
+            <li><a href="https://www.facebook.com/keiootoha/"><i class="fab fa-facebook-square icon"></i></a></li>
+            <li><a href="mailto:otoha.keio@gmail.com?body=%E6%96%B0%E6%AD%93Web%E3%82%B5%E3%82%A4%E3%83%88%E3%81%8B%E3%82%89%E3%83%A1%E3%83%BC%E3%83%AB%E3%82%92%E9%80%81%E4%BF%A1%E3%81%97%E3%81%BE%E3%81%99%E3%80%82%0D%0A%0D%0A%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%0D%0A%0D%0A%E3%81%8A%E5%90%8D%E5%89%8D%EF%BC%9A%0D%0A%0D%0A%E5%AD%A6%E9%83%A8%E3%83%BB%E5%AD%A6%E5%B9%B4%EF%BC%9A%0D%0A%0D%0A%E9%9B%BB%E8%A9%B1%E7%95%AA%E5%8F%B7%EF%BC%9A%0D%0A%0D%0A%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B%E5%86%85%E5%AE%B9%EF%BC%9A%0D%0A%0D%0A%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D%3D"><i class="far fa-envelope icon"></i></a></li>
+        </ul>
     </section>
 
     <footer>
