--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- ナビメニュー部分 -->
     <nav class="NavMenu">
         　<ul>
+            <li><a class="navImg" href="https://otohakeio.wixsite.com/keiootoha"><img src="imageForStyle/otoha-logo.png" alt=""></a></li>
             　　<li><a class="navItem" href="#whatIsOtoha">弦音巴とは？</a></li>
             <li><a class="navItem" href="#expMeetAndLive">説明会・ライブ</a></li>
             <li><a class="navItem" href="#practiceVisit">練習見学</a></li>
