--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     <script type="text/javascript" src="slick/slick.min.js"></script>
 
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+
+    <link rel="icon" href="favicon.ico">
+    <link rel="apple-touch-icon" width="180px" href="otoha-logo%20.png">
+
+    <meta name="description" content="津軽三味線集団弦音巴（おとは）は、創立5年目となる慶應義塾大学公認サークルです。「津軽三味線を広める」というミッションのもと、津軽三味線の演奏活動をメインに活動しています。新しいことを始めたい、人と違うことをしたい、そんなあなたにぴったりなサークルです。最後の学生生活、私たちと一緒に挑戦しませんか？">
+
+    <meta property="og:title" content="津軽三味線集団弦音巴（おとは）へようこそ！">
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="津軽三味線集団弦音巴（おとは）は、創立5年目となる慶應義塾大学公認サークルです。「津軽三味線を広める」というミッションのもと、津軽三味線の演奏活動をメインに活動しています。新しいことを始めたい、人と違うことをしたい、そんなあなたにぴったりなサークルです。最後の学生生活、私たちと一緒に挑戦しませんか？" />
+    <meta property="og:url" content="https://welcome-otoha.netlify.com/" />
+    <meta property="og:site_name" content="津軽三味線集団弦音巴（おとは）へようこそ！" />
+    <meta property="og:image" content="https://welcome-otoha.netlify.com/imageForStyle/hero.jpg" />
 </head>
 
 <body>
